# ccdtools

./: .gitignore  .readthedocs.yaml  README.md  access-cryosphere-data-pool.html  contributing.html  datapool.html  genindex.html  index.html  installation.html  modules.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorials.html
.doctrees/: access-cryosphere-data-pool.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  tutorials.doctree
.doctrees/api/: datapool.catalog.DataCatalog.doctree
.doctrees/tutorials/: example-usage.doctree
.github/workflows/: CI.yml  check-dependencies.yml  docs.yml  modify-issues.yml  release.yml
_sources/: access-cryosphere-data-pool.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  tutorials.rst.txt
_static/tutorials/: example-usage.ipynb
api/: datapool.catalog.DataCatalog.available_resolutions.html  datapool.catalog.DataCatalog.available_subdatasets.html  datapool.catalog.DataCatalog.available_versions.html  datapool.catalog.DataCatalog.help.html  datapool.catalog.DataCatalog.html  datapool.catalog.DataCatalog.load_dataset.html  datapool.catalog.DataCatalog.search.html  datapool.loaders.html
docs/: requirements.txt
docs/_static/: custom.css
docs/source/: access-cryosphere-data-pool.rst  ccdtools.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  tutorials.rst
docs/source/tutorials/: example-usage.ipynb
examples/: example-usage.ipynb
src/ccd/: catalog.py  loaders.py
src/ccd/config/: README.md
src/ccdtools/: catalog.py
src/ccdtools/config/: datasets.yaml
src/data_pool/: catalog.py  catalog_preprocessors.py  loaders.py
src/data_pool/config/: datasets.yaml
src/datapool/: __init__.py  catalog.py  loaders.py
tutorials/: 1_CCD_Overview.html  1_CCD_Overview.ipynb  example-usage.html  example-usage.ipynb
