[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccdtools"
version = "0.0.1.dev_180226"
description = "Cryosphere Community Datapool (CCD) and associated tools, managed by ACCESS-NRI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "ACCESS-NRI" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "xarray",
    "pandas",
    "geopandas",
    "rioxarray",
    "numpy",
    "PyYAML"
]

[tool.setuptools.package-data]
datapool = ["config/*.yml", "config/*.yaml"]

[project.urls]
Homepage = "https://github.com/ACCESS-NRI/ccdtools"
Repository = "https://github.com/ACCESS-NRI/ccdtools"
Issues = "https://github.com/ACCESS-NRI/ccdtools/issues"